# fantich

./: .gitignore  CONVENTIONS.md  Cargo.toml
src/: machine.rs
src/machine/: instructions.rs  registers.rs  tests.rs
